# desktop

./: Cargo.toml  GnomeDesktop-4.0.gir  flake.nix
gnome-desktop/: Cargo.toml  Gir.toml  docs.md
gnome-desktop/src/: lib.rs
gnome-desktop/src/auto/: desktop_thumbnail_factory.rs  enums.rs  functions.rs  idle_monitor.rs  mod.rs  pnp_ids.rs  wall_clock.rs  xkb_info.rs
gnome-desktop/sys/: Cargo.toml  Gir.toml
gnome-desktop/sys/src/: lib.rs
gnome-desktop/sys/tests/: abi.rs  constant.c  layout.c
