[package]
name = "gnome-desktop-xinux"
version = "0.4.3"
# authors = ["The Gtk-rs Project Developers"]
categories = ["api-bindings"]
description = "Rust bindings for the GNOME Utility Library "
edition = "2018"
keywords = ["gnome", "gtk"]
license = "MIT"
#repository = "https://gitlab.gnome.org/World/Rust/gnome-desktop-rs"
repository = "https://gitlab.gnome.org/vlinkz/gnome-desktop-rs"

[dependencies]
libc = "0.2"
glib = "0.20.9"
gio = "0.20.9"
gdk-pixbuf = "0.20.9"
gdesktop_enums = { package = "gsettings-desktop-schemas-xinux", version = "0.3.2" }
ffi = { package = "gnome-desktop-sys-xinux", path = "./sys", version = "0.4.3" }

[features]
default = []
