[package]
name = "gnome-desktop-sys"
version = "0.4.2"
license = "MIT"
description = "FFI bindings to gnome-desktop-4"
homepage = "https://gtk-rs.org/"
links = "\"libgnome-desktop-4\""
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.system-deps.gnome_desktop_4]
name = "gnome-desktop-4"
version = "4"

[package.metadata.system-deps.gnome_desktop_4.v42]
version = "42"

[package.metadata.system-deps.gnome_desktop_4.v43]
version = "43"

[package.metadata.system-deps.gnome_desktop_4.v44]
version = "44"

[lib]
name = "gnome_desktop_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.18"

[dependencies.gio]
package = "gio-sys"
version = "0.18"

[dependencies.gobject]
package = "gobject-sys"
version = "0.18"

[dependencies.gdk-pixbuf]
package = "gdk-pixbuf-sys"
version = "0.18"

[dependencies.gdesktop_enums]
package = "gsettings-desktop-schemas-sys"
version = "0.3.1"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v42 = []
v43 = ["v42"]
v44 = ["v43"]
